deployment/deploymentBackend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-connector-backend
  labels:
    app: api-connector-backend
  namespace: api-connector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-connector-backend
  template:
    metadata:
      labels:
        app: api-connector-backend
    spec:
      containers:
        - name: api-connector-backend
          image: "<hier eine Referenz auf die verwendete docker registry mit dem dockerimage tag vom backend und version>"
          ports:
            - name: internalhttp
              containerPort: 8080
              protocol: TCP
      imagePullSecrets:
      - name: <hier der secret name zum Authentifizieren mit der docker-Registry>
