deployment/serviceBackend.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-connector-backend
  labels:
    app: api-connector-backend

spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: api-connector-backend
