deployment/serviceFrontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-connector-frontend
  labels:
    app: api-connector-frontend

spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 4200
      protocol: TCP
  selector:
    app: api-connector-frontend
